--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     </head>
 
     <body>
+
+        <label for="weather">Select the weather type today: </label>
+        <select id="weather">
+            <option value="">--Make a choice--</option>
+            <option value="sunny">Sunny</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowing">Snowing</option>
+            <option value="overcast">Overcast</option>
+        </select>
+
+        <p></p>
+
         <script src="/javascript.js"></script>
     </body>
 
